# XBinaryViewer

./: .gitmodules  CMakeLists.txt  README.md
.github/workflows/: builder.yml
res/: Info.plist  license.txt  readme.txt  resource.rc
src/: CMakeLists.txt  global.h
src/console/: CMakeLists.txt  main_console.cpp
src/gui/: CMakeLists.txt  dialogabout.cpp  dialogabout.h  dialogabout.ui  dialogoptions.cpp  dialogoptions.h  dialogoptions.ui  gui_source.pro  guimainwindow.cpp  guimainwindow.h  guimainwindow.ui  main_gui.cpp  rsrc.qrc
src/gui/debug/: gui_source.ilk  moc_guimainwindow.cpp
src/gui/translation/: xbinaryviewer_ar_AR.ts  xbinaryviewer_bn_BN.ts  xbinaryviewer_de_DE.ts  xbinaryviewer_es_ES.ts  xbinaryviewer_fa_FA.ts  xbinaryviewer_fr_FR.ts  xbinaryviewer_he_IL.ts  xbinaryviewer_id_ID.ts  xbinaryviewer_it_IT.ts  xbinaryviewer_ja_JP.ts  xbinaryviewer_ko_KR.ts  xbinaryviewer_pl_PL.ts  xbinaryviewer_pt_BR.ts  xbinaryviewer_pt_PT.ts  xbinaryviewer_ru_RU.ts  xbinaryviewer_sv_SE.ts  xbinaryviewer_tr_TR.ts  xbinaryviewer_uk_UA.ts  xbinaryviewer_vi_VN.ts  xbinaryviewer_zh_CN.ts  xbinaryviewer_zh_TW.ts
